adding testling config

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ampersand-dependency-mixin",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A mixin that provides dependency management for Ampersand.js and Backbone",
   "dependencies": {
     "lodash.compact": "^2.4.1",
@@ -36,5 +36,21 @@
   "bugs": {
     "url": "https://github.com/wookiehangover/ampersand-dependency-mixin/issues"
   },
-  "homepage": "https://github.com/wookiehangover/ampersand-dependency-mixin"
+  "homepage": "https://github.com/wookiehangover/ampersand-dependency-mixin",
+  "testling": {
+    "files": "test/main.js",
+    "browsers": [
+      "ie/8..latest",
+      "firefox/17..latest",
+      "firefox/nightly",
+      "chrome/22..latest",
+      "chrome/canary",
+      "opera/12..latest",
+      "opera/next",
+      "safari/5.1..latest",
+      "ipad/6.0..latest",
+      "iphone/6.0..latest",
+      "android-browser/4.2..latest"
+    ]
+  }
 }
